<resources>
    <string name="app_name">My CV</string>
    <string name="curriculum_vitae">CURRICULUM VITAE</string>
    <string name="CV_name">Hi, I\'m\nHarsha Vardhan N</string>
    <string name="CV_image">My image</string>
    <string name="CV_designation">Android Developer\nContent Writer (Technical)</string>
    <string name="box_2_text">More...</string>
    <string name="box_1_text">Profile</string>
    <string name="cv_profile">PROFILE</string>
    <string name="cd_info_image">My Image</string>
    <string name="cv_text">A Tech-interested person with a zeal for learning about new technologies and gadgets. I love building Android Applications and also love writing content on Tech-Niche.</string>
    <string name="cv_text_2">I wish to be a part of a growing organization where I can enhance my skills by achieving a challenging position and playing an active role in self and organizational growth.</string>
    <string name="cv_button">More About Me...</string>
    <string name="day_and_night_switch">Day and Night Switch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1_text_1">Education &amp;\nCertifications</string>
    <string name="bachelors_in_engineering_cse">Bachelors in Engineering - CSE</string>
    <string name="neil_gogte_institute_of_technology_n_2020_2023">Neil Gogte Institute Of Technology\n(2020-2023)</string>
    <string name="diploma_in_computer_science">Diploma in Computer Science</string>
    <string name="government_institute_of_electronics_n_2016_2019">Government Institute Of Electronics\n(2016-2019)</string>
    <string name="ts_ssc">TS SSC</string>
    <string name="bhashyam_high_school_n_2015_2016">Bhashyam High School\n(2015-2016)</string>
    <string name="certificate_icon">Certificate Icon</string>
    <string name="android_basics_nanodegree_by_google">Android Basics Nanodegree by Google</string>
    <string name="certified_on_july_2019">Certified on July,2019</string>
    <string name="fragment_1_text_2">Skills &amp; Interests</string>
    <string name="Skills">Android Development\nAndroid XML\nJava Programming\nC / C++</string>
    <string name="android_development">Android Development</string>
    <string name="java">Java</string>
    <string name="c_c">C/C++</string>
    <string name="electronic_gadgets">Electronic Gadgets</string>
    <string name="tech_writing">Writing</string>
    <string name="music">Music</string>
    <string name="cars">Cars</string>
    <string name="anime">Anime</string>
    <string name="interests">Interests</string>
    <string name="Work_and_Internships"><![CDATA[Work Experience &\n Internships]]></string>
    <string name="android_developer">Android Developer</string>
    <string name="pos_1_info">Freelancing, Hyderabad, Telangana\n2021-05 – Current</string>
    <string name="pos_2_info">Aditya Farrad Production, Internship\n2020-09 – 2021-04</string>
    <string name="pos_3_info">Thetecheducation, Internship\n2020-03 – 2020-05</string>
    <string name="Bullet">●</string>
    <string name="technical_content_writer">Technical Content Writer</string>
    <string name="position_1_desc_1">Attained basic knowledge of Google Firebase.</string>
    <string name="position_1_desc">Developed beginner level applications using Android XML as front-end and Java as back-end.</string>
    <string name="position_2_desc">Written more than 250 articles for the organization; Most of the articles are based on Tech Updates and Gadget Reviews.</string>
    <string name="position_2_desc_1">Also, written research articles on latest technologies.</string>
    <string name="contact_info">Contact Info</string>
    <string name="reach_me_on_social_media">Reach me on Social Media on</string>
    <string name="check_my_projects_at">Check my Projects on</string>
    <string name="check_my_freelance_profiles_at">Check my Freelance profiles on</string>
    <string name="connect_with_me_on">Connect with me on</string>
    <string name="contact_me_on_my_work_profiles">Contact me on my Work Profiles</string>
</resources>