<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_1_frame_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            android:text="@string/fragment_1_text_1"
            android:textColor="@color/Deloitte"
            android:textSize="32sp" />

       <ScrollView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/text_1_frame_1"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl1_frame_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/frame_design">

            <TextView
                android:id="@+id/education_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:padding="10dp"
                android:text="@string/bachelors_in_engineering_cse"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/education_1"
                android:fontFamily="@font/open_sans"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/neil_gogte_institute_of_technology_n_2020_2023"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl1_frame_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/frame_design">

            <TextView
                android:id="@+id/education_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:padding="10dp"
                android:text="@string/diploma_in_computer_science"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/education_2"
                android:fontFamily="@font/open_sans"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/government_institute_of_electronics_n_2016_2019"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl1_frame_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl1_frame_2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/frame_design">

            <TextView
                android:id="@+id/education_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:padding="10dp"
                android:text="@string/ts_ssc"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/open_sans"
                android:layout_below="@id/education_3"
                android:text="@string/bhashyam_high_school_n_2015_2016"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="16sp"
                android:paddingBottom="10dp"/>

        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/certification_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/frame_design">

        <ImageView
            android:id="@+id/certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/certificate_icon"
            android:src="@drawable/certification" />

        <TextView
            android:id="@+id/certification_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/certification"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/android_basics_nanodegree_by_google"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/certification_1"
            android:fontFamily="@font/open_sans"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:text="Certified on July,2019 "
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

                </LinearLayout>
       </ScrollView>
    </LinearLayout>
    </FrameLayout>
