<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_info_scene"
    tools:context=".info">

    <ImageView
        android:id="@+id/cv_info_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/cd_info_image"
        android:src="@drawable/cv_pic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cv_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/alata"
        android:text="@string/cv_profile"
        android:textColor="#417505"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_info_img" />

    <View
        android:id="@+id/cv_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/Deloitte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_info_text" />

    <TextView
        android:id="@+id/cv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans"
        android:textSize="18sp"
        android:textColor="@color/Deloitte"
        android:justificationMode="inter_word"
        android:text="@string/cv_text"
        app:layout_constraintTop_toBottomOf="@id/cv_view"/>

    <TextView
        android:id="@+id/cv_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/cv_text"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans"
        android:textSize="18sp"
        android:textColor="@color/Deloitte"
        android:text="@string/cv_text_2"
        android:justificationMode="inter_word"/>

    <RelativeLayout
        android:id="@+id/cv_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_text_2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/n_button"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:background="@drawable/ripple_effect"
            android:textColor="@color/white"
            android:text="@string/cv_button"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>