<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cv_animation"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cv_green_2" />

    <TextView
        android:id="@+id/cv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/curriculum_vitae"
        android:textColor="@color/Deloitte"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cv_animation"
        app:layout_constraintStart_toStartOf="@id/cv_animation"
        app:layout_constraintTop_toBottomOf="@id/cv_animation" />

    <View
        android:id="@+id/line"
        app:layout_constraintTop_toBottomOf="@id/cv_text"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/Deloitte" />

    <ImageView
        android:id="@+id/cv_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0.8"
        android:layout_marginTop="20dp"
        android:src="@drawable/cv_pic"
        android:layout_marginEnd="-60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:contentDescription="@string/CV_image" />

    <TextView
        android:layout_marginTop="55dp"
        android:id="@+id/cv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CV_name"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:layout_marginStart="22dp"
        android:fontFamily="@font/alata"
        android:textColor="@color/Deloitte"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/cv_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/CV_designation"
        android:textColor="@color/Deloitte"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_text2" />

    <LinearLayout
        android:id="@+id/CV_LL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/cv_box_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_buttons"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="22dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/box_1_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/cv_proceed_flip"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15dp"
                android:rotation="0"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/left" />

        </RelativeLayout>

        <View
            android:id="@+id/box_line"
            android:layout_width="1dp"
            android:layout_height="125dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible" />

        <RelativeLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/cv_box_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_buttons"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="22dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box_2_text"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans"
                android:layout_marginStart="25dp"
                android:textSize="22sp"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/cv_proceed"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15dp"
                android:rotation="0"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/right" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>